tdf#97924: Transparency slider causes entire sidebar to constantly refresh

Reduce the calls for sidebar resize

Change-Id: I82552b67c0876777a31b6912befcd8f9d737ae94